add prod deployer

--- a/.github/workflows/aws-infra-deployer.yaml
+++ b/.github/workflows/aws-infra-deployer.yaml
@@ -25,6 +25,7 @@ jobs:
       role_to_assume: ${{ secrets.ROLE_TO_ASSUME }}
 
   infra-resources-prod:
+    needs: infra-resources-nonprod
     uses: rash-ms/planet-workflow/.github/workflows/terraform.yml@1.0.0
     # uses: rash-ms/planet-workflow/.github/workflows/lit-terraform.yml@1.0.2
     permissions:
