--- a/.github/workflows/aws-infra-deployer.yaml
+++ b/.github/workflows/aws-infra-deployer.yaml
@@ -8,7 +8,7 @@ on:
 jobs:
   infra-resources-nonprod:
     uses: rash-ms/planet-workflow/.github/workflows/terraform.yml@1.0.0
-    # uses: rash-ms/planet-workflow/.github/workflows/lit-terraform.yml@1.1.1
+    # uses: rash-ms/planet-workflow/.github/workflows/lit-terraform.yml@1.0.1
     permissions:
       id-token: write  
       contents: read   
@@ -24,21 +24,21 @@ jobs:
       account_id:  ${{ secrets.ACCOUNT_ID }}
       role_to_assume: ${{ secrets.ROLE_TO_ASSUME }}
 
-  infra-resources-prod:
-    needs: infra-resources-nonprod
-    uses: rash-ms/planet-workflow/.github/workflows/terraform.yml@1.0.0
-    # uses: rash-ms/planet-workflow/.github/workflows/lit-terraform.yml@1.0.2
-    permissions:
-      id-token: write  
-      contents: read   
-    with:
-      version: 1.2.6
-      environment_plan: infra-resources-prod-protected
-      environment_apply: infra-resources-prod-protected
-      infra_dir: infra-resources-prod
-      working_dir: infras
-      aws_default_region: us-east-1
-      main_branch: main
-    secrets:
-      account_id:  ${{ secrets.ACCOUNT_ID }}
-      role_to_assume: ${{ secrets.ROLE_TO_ASSUME }}
+  # infra-resources-prod:
+  #   needs: infra-resources-nonprod
+  #   uses: rash-ms/planet-workflow/.github/workflows/terraform.yml@1.0.0
+  #   # uses: rash-ms/planet-workflow/.github/workflows/lit-terraform.yml@1.0.2
+  #   permissions:
+  #     id-token: write  
+  #     contents: read   
+  #   with:
+  #     version: 1.2.6
+  #     environment_plan: infra-resources-prod-protected
+  #     environment_apply: infra-resources-prod-protected
+  #     infra_dir: infra-resources-prod
+  #     working_dir: infras
+  #     aws_default_region: us-east-1
+  #     main_branch: main
+  #   secrets:
+  #     account_id:  {{ secrets.ACCOUNT_ID }}
+  #     role_to_assume: {{ secrets.ROLE_TO_ASSUME }} 
