--- a/.github/workflows/aws-infra-deployer.yaml
+++ b/.github/workflows/aws-infra-deployer.yaml
@@ -8,7 +8,7 @@ on:
 jobs:
   infra-resources-nonprod:
     uses: rash-ms/planet-workflow/.github/workflows/terraform.yml@1.0.0
-    # uses: rash-ms/planet-workflow/.github/workflows/lit-terraform.yml@1.4.1
+    # uses: rash-ms/planet-workflow/.github/workflows/lit-terraform.yml@1.2.1
     permissions:
       id-token: write  
       contents: read   
@@ -23,6 +23,9 @@ jobs:
     secrets:
       account_id:  ${{ secrets.ACCOUNT_ID }}
       role_to_assume: ${{ secrets.ROLE_TO_ASSUME }}
+      destroyer_token:  ${{ secrets.DESTOYER_TOKEN }}
+      render_webhook_url: ${{ secrets.RENDER_WEBHOOK_URL }}
+
 
   # infra-resources-prod:
   #   needs: infra-resources-nonprod
