--- a/.github/workflows/aws-infra-deployer.yaml
+++ b/.github/workflows/aws-infra-deployer.yaml
@@ -8,7 +8,7 @@ on:
 jobs:
   infra-resources-nonprod:
     uses: rash-ms/planet-workflow/.github/workflows/terraform.yml@1.0.0
-    # uses: rash-ms/planet-workflow/.github/workflows/lit-terraform.yml@1.2.1
+    # uses: rash-ms/planet-workflow/.github/workflows/lit-terraform.yml@1.4.1
     permissions:
       id-token: write  
       contents: read   
@@ -16,6 +16,7 @@ jobs:
       version: 1.2.6
       environment_plan: infra-resources-nonprod-protected
       environment_apply: infra-resources-nonprod-protected
+      notify_environment: notify-auto-approval   
       infra_dir: infra-resources-nonprod
       working_dir: infras
       aws_default_region: us-east-1
@@ -23,7 +24,7 @@ jobs:
     secrets:
       account_id:  ${{ secrets.ACCOUNT_ID }}
       role_to_assume: ${{ secrets.ROLE_TO_ASSUME }}
-      destroyer_token:  ${{ secrets.DESTOYER_TOKEN }}
+      destroyer_token:  ${{ secrets.DESTROYER_TOKEN }}
       render_webhook_url: ${{ secrets.RENDER_WEBHOOK_URL }}
 
 
