--- a/.github/workflows/aws-infra-destroyer.yaml
+++ b/.github/workflows/aws-infra-destroyer.yaml
@@ -26,8 +26,8 @@ jobs:
         run: |
           echo "ACCOUNT_ID: ${{ secrets.ACCOUNT_ID }}"
           echo "ROLE_TO_ASSUME: ${{ secrets.ROLE_TO_ASSUME }}"
-      
-      - name: Configure AWS credentials
+
+      - name: Configure AWS credentials using OIDC
         uses: aws-actions/configure-aws-credentials@v2
         with:
           role-to-assume: arn:aws:iam::${{ secrets.ACCOUNT_ID }}:role/${{ secrets.ROLE_TO_ASSUME }}
